# datasette-llm

./: README.md  pyproject.toml
datasette_llm/: __init__.py  hookspecs.py
tests/: test_llm.py
